# poc_rag

./: .env.example  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/chat/: memory.py  retrieval.py
backend/app/generator/: generate.py  rerank.py
backend/app/ingestion/: describe.py  embed.py  ingest.py  vector_db.py
backend/app/utils/: bm25.py  get_mistral_client.py
est/: .python-version.json  main.py.json  pyproject.toml.json  rag_testdokument_tabellen-Kopie-7b4129d9.pdf.json  uv.lock.json
frontend/: Dockerfile  RagPocApp.jsx  vite.config.js
frontend/src/: App.jsx
unstructered_tes/: describe.py  main.py  pyproject.toml  sync.py
