[project]
name = "rag-poc-backend"
version = "0.1.0"
description = "Quick and dirty FastAPI backend for a local RAG PoC with Qdrant"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "python-multipart>=0.0.9",
  "mistralai==1.8.2",
  "qdrant-client[fastembed]==1.15.1",
  "uvicorn[standard]==0.35.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "unstructured-client>=0.42.3",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
